dsp filter calculation update

--- a/common/bib/mathmisc.bib
+++ b/common/bib/mathmisc.bib
@@ -1737,7 +1737,7 @@
   }
 
 @article{minderhoud2010oct,
-  title        = {Using Kurtosion® to Accelerate Structural Life Testing},
+  title        = {Using KurtosionR to Accelerate Structural Life Testing},
   author       = {Joel Minderhoud and Philip Van Baren},
   institution  = {Vibration Research Corporation},
   address      = {Jenison, Michigan},
@@ -1755,5 +1755,15 @@
   year         = {2009},
   month        = {December},
   url          = {https://www.vibrationresearch.com/articles/fatigue_kurtosis.html},
+  }
+  
+@book{wiener1948,
+  title        = {Cybernetics Or Communication And Control In The Animal And The Machine},
+  author       = {Norbert Wiener},
+  year         = {1948},
+  url          = {https://archive.org/details/CyberneticsOrCommunicationAndControlInTheAnimalAndTheMachineNorbertWiener/page/n0},
+  edition      = {1},
+  publisher    = {M.I.T. Press},
+  address      = {Cambridge, MA, USA},
   }
   
