--- a/common/dsp.tex
+++ b/common/dsp.tex
@@ -148,6 +148,45 @@ Let $\convd$ be the \structe{convolution operator} \xref{def:dsp_conv}.
 %--------------------------------------
 \begin{theorem}
 %--------------------------------------
+Let $\opZ\fx[n]$ be the \ope{z-transform} of $\fx[n]$.
+\thmbox{\opZ\seqn{a\fx[n]} = a X(z)}
+\end{theorem}
+\begin{proof}
+\begin{align*}
+  a X(z)
+    &\eqd a \opZ \seqn{\fx[n]}                && \text{by definition of $X(z)$}
+  \\&\eqd a \sum_{n\in\Z} \fx[n] z^{-n}       && \text{by definition of $\opZ$ operator}
+  \\&\eqd \sum_{n\in\Z} \brp{a \fx[n]} z^{-n} && \text{by \prope{distributive} property}
+  \\&\eqd \opZ\seqn{a\fx[n]}                  && \text{by definition of $\opZ$ operator}
+\end{align*}
+\end{proof}
+
+%--------------------------------------
+\begin{theorem}
+%--------------------------------------
+\thmbox{
+  \opZ\seqn{\fx[n-k]} = z^{-k}X(z)
+  }
+\end{theorem}
+\begin{proof}
+\begin{align*}
+  z^{-k}X(z) 
+    &= z^{-k} \opZ\seqn{\fx[n]}
+   &&\eqd z^{-k}\sum_{n=-\infty}^{n=+\infty} \fx[n] z^{-n}
+  \\&=          \sum_{n=-\infty}^{n=+\infty} \fx[n] z^{-n-k}
+  \\&=          \sum_{m-k=-\infty}^{m-k=+\infty} \fx[m-k] z^{-m}
+    && \text{where $m\eqd n+k$ $\implies$ $n=m-k$}
+  \\&=          \sum_{m=-\infty}^{m=+\infty} \fx[m-k] z^{-m}
+  \\&=          \sum_{n=-\infty}^{n=+\infty} \fx[n-k] z^{-n}
+    && \text{by change of free variable $m\rightarrow n$}
+  \\&\eqd \opZ\seqn{\fx[n-k]}
+    && \text{by definition of $\opZ$ operator}
+\end{align*}
+\end{proof}
+
+%--------------------------------------
+\begin{theorem}
+%--------------------------------------
 Let $\convd$ be the convolution operator \xref{def:dsp_conv}.
 %$\seq{x_n}{n\in\Z}$ and $\seq{y_n}{n\in\Z}$ be sequences in the space $\spllR$. %be sequences over a ring $\ring$.
 \thmbox{
