--- a/common/math/graphics/dsp/iir1pole.tex
+++ b/common/math/graphics/dsp/iir1pole.tex
@@ -14,7 +14,7 @@
   \psaxes[linecolor=axis,labels=none,ticks=none,yAxis=false]{->}(0,0)(0,-1.5)(3.5,1.5)%x-axis
   \psaxes[linecolor=axis,labels=none,ticks=none,xAxis=false]{<->}(0,0)(0,-1.5)(3.5,1.5)%y-axis
   \uput{2pt}[180](0,-1){$-1$}%
-  \uput{2pt}[  0](3.5,0){$\omega$}%
+  \uput{2pt}[  0](3.5,0){$\omega_c$}%
   %
   %-------------------------------------
   % x-axis labeling
