--- a/common/sty/language.sty
+++ b/common/sty/language.sty
@@ -20,9 +20,9 @@
 %--------------------------------------
 % length
 %--------------------------------------
-\newlength{\length}
-\newlength{\lengtha}
-\newlength{\lengthb}
+%20181004movedtodan.sty%\newlength{\length}
+%20181004movedtodan.sty%\newlength{\lengtha}
+%20181004movedtodan.sty%\newlength{\lengthb}
 
 %--------------------------------------
 % Language Bus
@@ -3196,81 +3196,85 @@
   \index[xeng]{#3}
   }
 
-\newcommand{\bso}[2][]{\blanksol[#1]{#2}}% blank with solution
-\newcommand{\bsox}[2][]{\blank[#1]}% blank with extraneous (extra) unused paramter
-\newcommand{\blanksol}[2][]{% blank with solution
-  \ifthenelse{\isempty{#1}}{\settowidth{\length}{#2#2}}{\setlength{\length}{#1}}
-  %\ifthenelse{#1=0}{\settowidth{\length}{#2#2}}{\setlength{\length}{#1}}
-  \ifthenelse{\boolean{showSolution}}%
-    {\underline{\parbox[l][1em][c]{\length}{\centering\textcolor{blue}{#2}}}}%
-    {\underline{\parbox[l][1em][c]{\length}{\hspace{1ex}}}}%
-  %\ifthenelse{\isempty{#2}}{}{\index[xeng]{#2}}
-  }
-\newcommand{\bsoAo}[2][]{\cntreset\refstepcounter{cntr}\blankopt[#1]{\Alph{cntr}}{#2}}%blank with ABC counter set to A
-\newcommand{\bsoA} [2][]{\refstepcounter{cntr}\blankopt[#1]{\Alph{cntr}}{#2}}%blank with ABC counter
-
-\newcommand{\bss}[2][30mm]{\blanksso[#1]{#2}}% blank with shown solution
-\newcommand{\blanksso}[2][30mm]{% blank with shown solution
-  \underline{\parbox[l][1em][c]{#1}{\centering\color{blue}#2}}%
-  \index[xeng]{#2}
-  }
-
-%\newcommand{\blankops}[3][]{% blank with option and solution
-%  {\showSolution\blankopt[#1]{#2}{#3}}
-%  }
-
-%\newcommand{\blank}   [1][10mm]{\blankopt[#1]{}{}}%blank with hint
-\newcommand{\blank}   [1][10mm]{\underline{\hspace{#1}}}% blank line
-\newcommand{\bhint}   [2][]{\blankopt[#1]{#2}{}}%blank with hint
-\newcommand{\bzyhint} [2][]{\blankopt[#1]{{\fntzhr#2}}{}}%blank with hint in Chinese with bopomofo
-\newcommand{\bcopy}   [2][]{\blankopt[#1]{#2}{#2}}%blank with what to copy
-\newcommand{\bhintx}  [3][]{\blankopt[#1]{#2}{}}%blank with hint and extraneous (unused) parameter (used for making writing exercises from listening exercises
-\newcommand{\bop}     [3][]{\blankopt[#1]{#2}{#3}}%blank with options and hidden solution
 
 
-\newcommand{\bops}[3][]{\blankops[#1]{#2}{#3}}%blank with options and shown solution
-\newcommand{\blankopt}[3][]%blank with options and solution
-  {%
-    \ifthenelse{\not\isempty{#2}}{\settowidth{\lengtha}{#2#2}}{\settowidth{\lengtha}{1em}}%
-    \ifthenelse{\not\isempty{#3}}{\settowidth{\lengthb}{#3#3}}{\settowidth{\lengthb}{1em}}%
-    \ifthenelse{\not\isempty{#1}}%
-      {\setlength{\length}{#1}}%
-      {\ifthenelse{\isempty{#3}}%
-        {\settowidth{\length}{#2#2}}%
-        {\settowidth{\length}{#3#3}}%
-      }%
-      %{\ifthenelse{\lengthtest{\lengtha>\lengthb}}%      
-      %  {\settowidth{\length}{\lengtha}}%
-      %  {\settowidth{\length}{\lengthb}}%
-      %}%
-    \renewcommand{\arraystretch}{0.5}%
-    \begin{tabular}[t]{@{}c@{}}%
-      \blanksol[\length]{#3}%
-      \\%
-      \scriptsize\textcolor{blue}{#2}%
-    \end{tabular}%
-    \renewcommand{\arraystretch}{1}%
-  }%
 
-\newcommand{\blankp}[3][2em]{%phonics blank with options and solution
-  \renewcommand{\arraystretch}{0.5}
-  \begin{tabular}[t]{@{}c@{}}%
-    \blanksol[#1]{\fntipa#3}%
-    \\%
-    \scriptsize\textcolor{blue}{\fntipa#2}%
-  \end{tabular}%
-  \renewcommand{\arraystretch}{1}
-  }%
 
-\newcommand{\blankops}[3][30mm]{%blank with options and solution
-  \renewcommand{\arraystretch}{0.5}
-  \begin{tabular}[t]{@{}c@{}}%
-    \blanksso[#1]{#3}%
-    \\%
-    \scriptsize\textcolor{blue}{#2}%
-  \end{tabular}%
-  \renewcommand{\arraystretch}{1}
-  }%
+%20181004movedtodan.sty%
+%20181004movedtodan.sty%\newcommand{\bso}[2][]{\blanksol[#1]{#2}}% blank with solution
+%20181004movedtodan.sty%\newcommand{\bsox}[2][]{\blank[#1]}% blank with extraneous (extra) unused paramter
+%20181004movedtodan.sty%\newcommand{\blanksol}[2][]{% blank with solution
+%20181004movedtodan.sty%  \ifthenelse{\isempty{#1}}{\settowidth{\length}{#2#2}}{\setlength{\length}{#1}}
+%20181004movedtodan.sty%  %\ifthenelse{#1=0}{\settowidth{\length}{#2#2}}{\setlength{\length}{#1}}
+%20181004movedtodan.sty%  \ifthenelse{\boolean{showSolution}}%
+%20181004movedtodan.sty%    {\underline{\parbox[l][1em][c]{\length}{\centering\textcolor{blue}{#2}}}}%
+%20181004movedtodan.sty%    {\underline{\parbox[l][1em][c]{\length}{\hspace{1ex}}}}%
+%20181004movedtodan.sty%  %\ifthenelse{\isempty{#2}}{}{\index[xeng]{#2}}
+%20181004movedtodan.sty%  }
+%20181004movedtodan.sty%\newcommand{\bsoAo}[2][]{\cntreset\refstepcounter{cntr}\blankopt[#1]{\Alph{cntr}}{#2}}%blank with ABC counter set to A
+%20181004movedtodan.sty%\newcommand{\bsoA} [2][]{\refstepcounter{cntr}\blankopt[#1]{\Alph{cntr}}{#2}}%blank with ABC counter
+%20181004movedtodan.sty%
+%20181004movedtodan.sty%\newcommand{\bss}[2][30mm]{\blanksso[#1]{#2}}% blank with shown solution
+%20181004movedtodan.sty%\newcommand{\blanksso}[2][30mm]{% blank with shown solution
+%20181004movedtodan.sty%  \underline{\parbox[l][1em][c]{#1}{\centering\color{blue}#2}}%
+%20181004movedtodan.sty%  \index[xeng]{#2}
+%20181004movedtodan.sty%  }
+%20181004movedtodan.sty%
+%20181004movedtodan.sty%\newcommand{\blank}   [1][10mm]{\underline{\hspace{#1}}}% blank line
+%20181004movedtodan.sty%\newcommand{\bhint}   [2][]{\blankopt[#1]{#2}{}}%blank with hint
+%20181004movedtodan.sty%\newcommand{\bzyhint} [2][]{\blankopt[#1]{{\fntzhr#2}}{}}%blank with hint in Chinese with bopomofo
+%20181004movedtodan.sty%\newcommand{\bcopy}   [2][]{\blankopt[#1]{#2}{#2}}%blank with what to copy
+%20181004movedtodan.sty%\newcommand{\bhintx}  [3][]{\blankopt[#1]{#2}{}}%blank with hint and extraneous (unused) parameter (used for making writing exercises from listening exercises
+%20181004movedtodan.sty%\newcommand{\bop}     [3][]{\blankopt[#1]{#2}{#3}}%blank with options and hidden solution
+%20181004movedtodan.sty%\newcommand{\bops}[3][]{\blankops[#1]{#2}{#3}}%blank with options and shown solution
+%20181004movedtodan.sty%\newcommand{\blankopt}[3][]%blank with options and solution
+%20181004movedtodan.sty%  {%
+%20181004movedtodan.sty%    \ifthenelse{\not\isempty{#2}}{\settowidth{\lengtha}{#2#2}}{\settowidth{\lengtha}{1em}}%
+%20181004movedtodan.sty%    \ifthenelse{\not\isempty{#3}}{\settowidth{\lengthb}{#3#3}}{\settowidth{\lengthb}{1em}}%
+%20181004movedtodan.sty%    \ifthenelse{\not\isempty{#1}}%
+%20181004movedtodan.sty%      {\setlength{\length}{#1}}%
+%20181004movedtodan.sty%      {\ifthenelse{\isempty{#3}}%
+%20181004movedtodan.sty%        {\settowidth{\length}{#2#2}}%
+%20181004movedtodan.sty%        {\settowidth{\length}{#3#3}}%
+%20181004movedtodan.sty%      }%
+%20181004movedtodan.sty%      %{\ifthenelse{\lengthtest{\lengtha>\lengthb}}%      
+%20181004movedtodan.sty%      %  {\settowidth{\length}{\lengtha}}%
+%20181004movedtodan.sty%      %  {\settowidth{\length}{\lengthb}}%
+%20181004movedtodan.sty%      %}%
+%20181004movedtodan.sty%    \renewcommand{\arraystretch}{0.5}%
+%20181004movedtodan.sty%    \begin{tabular}[t]{@{}c@{}}%
+%20181004movedtodan.sty%      \blanksol[\length]{#3}%
+%20181004movedtodan.sty%      \\%
+%20181004movedtodan.sty%      \scriptsize\textcolor{blue}{#2}%
+%20181004movedtodan.sty%    \end{tabular}%
+%20181004movedtodan.sty%    \renewcommand{\arraystretch}{1}%
+%20181004movedtodan.sty%  }%
+%20181004movedtodan.sty%
+%20181004movedtodan.sty%\newcommand{\blankp}[3][2em]{%phonics blank with options and solution
+%20181004movedtodan.sty%  \renewcommand{\arraystretch}{0.5}
+%20181004movedtodan.sty%  \begin{tabular}[t]{@{}c@{}}%
+%20181004movedtodan.sty%    \blanksol[#1]{\fntipa#3}%
+%20181004movedtodan.sty%    \\%
+%20181004movedtodan.sty%    \scriptsize\textcolor{blue}{\fntipa#2}%
+%20181004movedtodan.sty%  \end{tabular}%
+%20181004movedtodan.sty%  \renewcommand{\arraystretch}{1}
+%20181004movedtodan.sty%  }%
+%20181004movedtodan.sty%
+%20181004movedtodan.sty%\newcommand{\blankops}[3][30mm]{%blank with options and solution
+%20181004movedtodan.sty%  \renewcommand{\arraystretch}{0.5}
+%20181004movedtodan.sty%  \begin{tabular}[t]{@{}c@{}}%
+%20181004movedtodan.sty%    \blanksso[#1]{#3}%
+%20181004movedtodan.sty%    \\%
+%20181004movedtodan.sty%    \scriptsize\textcolor{blue}{#2}%
+%20181004movedtodan.sty%  \end{tabular}%
+%20181004movedtodan.sty%  \renewcommand{\arraystretch}{1}
+%20181004movedtodan.sty%  }%
+%20181004movedtodan.sty%
+
+
+
+
+
 
 \newcommand{\circledopx}[1]{%
   \ifthenelse{\boolean{showSolution}}%
