--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -1280,6 +1280,7 @@
 \newcommand{\fG} [0]{\mathfnct{G}}  % Gabor transform
 \newcommand{\fI} [0]{\mathfnct{I}}  % integral
 \newcommand{\fh}{\mathfnct{h}}
+\newcommand{\fH}{\mathfnct{H}}
 \newcommand{\fP}{\mathfnct{P}}
 \newcommand{\fR}{\mathfnct{R}}
 \newcommand{\fQ}{\mathfnct{Q}}
@@ -1334,6 +1335,11 @@
 \newcommand{\Lx}    [0]{{\LT{\fx}}}
 \newcommand{\Zx}    [0]{{\LT{\fx}}}
 \newcommand{\Zy}    [0]{{\LT{\fy}}}
+
+\newcommand{\ZH}    [0]{{\ZT{\fH}}}
+\newcommand{\FH}    [0]{{\ft{\fH}}}
+
+
 
 \newcommand{\sym}   [0]{\mathup{\lambda}}
 \newcommand{\symf}  [0]{\ft{\lambda}}
