--- a/common/zcalc.tex
+++ b/common/zcalc.tex
@@ -6,7 +6,6 @@
 %=======================================
 \chapter{Coefficient Calculation}
 %=======================================
-\newpage
 %--------------------------------------
 1st Order Low-Pass calculation
 %--------------------------------------
@@ -28,7 +27,6 @@
    &&\implies \boxed{a=\frac{c+1}{2}}
 \end{align*}
 \mbox{}\vfill
-\newpage
 \begin{align*}
   \frac{1}{2}
     &= \abs{H(z)}^2_{z=e^{i\omega_c}}
@@ -92,10 +90,8 @@ $\ds\boxed{z=-c = \frac{1 - \sin\brp{\omega_c}}
                     {\cos\brp{\omega_c}}}$
 
 %---------------------------------------
-\newpage
-Example: 1st order low-pass with corner frequency $\omega_c=\frac{2}{3}\pi$
+\begin{example}[\exmd{1st order low-pass with corner frequency $\omega_c=\frac{2}{3}\pi$}]
 %---------------------------------------
-
 {\begin{align*}
   c &= \frac{-1 + \sin\brp{\omega_c}}{\cos\brp{\omega_c}}
      = \frac{-1 + \sin\brp{\sfrac{2}{3}\pi}}{\cos\brp{\sfrac{2}{3}\pi}}
@@ -111,7 +107,7 @@ Example: 1st order low-pass with corner frequency $\omega_c=\frac{2}{3}\pi$
 \end{align*}}
 
 \includegraphics{graphics/lpfwc.pdf}
-
+\end{example}
 
 
 
@@ -189,7 +185,7 @@ $\ds\boxed{ H(z) = \frac{a + bz^{-1}}
 
 
 %---------------------------------------
-Example: 1st order high-pass with corner frequency $\omega_c=\frac{1}{3}\pi$
+\begin{example}[\exmd{1st order high-pass with corner frequency $\omega_c=\frac{1}{3}\pi$}
 %---------------------------------------
 
 {\begin{align*}
@@ -207,11 +203,8 @@ Example: 1st order high-pass with corner frequency $\omega_c=\frac{1}{3}\pi$
 \end{align*}}
 
 \includegraphics{graphics/hpfwc.pdf}
+\end{example}
 
-
-
-%---------------------------------------
-%---------------------------------------
 
 So $c=\sqrt{3}-2$,\qquad $a=\frac{1-c}{2}=\frac{3-\sqrt{3}}{2}$, \qquad $b=-a=\frac{\sqrt{3}-3}{2}$
 \begin{align*}
@@ -225,12 +218,6 @@ So $c=\sqrt{3}-2$,\qquad $a=\frac{1-c}{2}=\frac{3-\sqrt{3}}{2}$, \qquad $b=-a=\f
 \end{align*}
 
 
-
-
-
-%---------------------------------------
-
-%---------------------------------------
 
 
 
