--- a/common/zcalc2.tex
+++ b/common/zcalc2.tex
@@ -46,7 +46,7 @@ Equation 1: Gain=1 at DC
 %---------------------------------------
 Equation 2: Gain = $\sfrac{1}{2}$ at corner frequency
 %---------------------------------------
-{ \begin{align*}
+\begin{align*}
   \boxed{\abs{\Fh(\omega)}^2}
     &= \abs{\Zh(z)}^2_{z=e^{i\omega}}
      = \abs{G\brs{\frac{\brp{1+z^{-1}}^2}
@@ -63,7 +63,7 @@ $\ds\boxed{
   G^2\brs{\frac{\ds2 \cos(2\omega_c) + 8\cos(\omega_c) + 6}
                     {\ds2b\cos(2\omega_c) + 2a(b+1)\cos(\omega_c) + (a^2+b^2+1)}}
   = \frac{1}{2}
-  }$}
+  }$
 \vfill 
 
 %---------------------------------------
@@ -109,7 +109,7 @@ Equation 3: For more smoothness in passband, set 2nd derivative to 0:
 
 
 %---------------------------------------
-Example: 2nd order \propb{low-pass} with corner frequency $\omega_c=\frac{2}{3}\pi$
+\begin{example}2nd order \propb{low-pass} with corner frequency $\omega_c=\frac{2}{3}\pi$
 %---------------------------------------
 { \begin{align*}
   1&= \Fh(0) = \brlr{\Zh(z)}_{z=e^{i0}} = \frac{G(1+1)^2}{1+a+b} &&\implies \boxed{4G = a + b + 1}
@@ -127,7 +127,7 @@ Example: 2nd order \propb{low-pass} with corner frequency $\omega_c=\frac{2}{3}\
 \end{align*}}
 
  
-{  We can combine the previous two \fbox{boxed} equations to eliminate $G$
+ We can combine the previous two \fbox{boxed} equations to eliminate $G$
 \\
 { \begin{align*}
   0 &= 8\times0
@@ -164,3 +164,4 @@ $\ds\boxed{
 2nd derivative equation:\\
 \boxed{8a^2+ 8b^2 +15ab + 15a + 12b = 0}
 }
+\end{example}
