--- a/dsp/main.tex
+++ b/dsp/main.tex
@@ -169,8 +169,8 @@
 \include{../common/zchar}
 %\include{../common/zcalc}
 \include{../common/zcalc1}
-\include{../common/zcalc2}
-\include{../common/zcalc2p}
+\input{../common/zcalc2.tex}
+\input{../common/zcalc2p.tex}
 \include{../common/dspcalculus}
 
 %--------------------------------------
