--- a/dsp/src_code.tex
+++ b/dsp/src_code.tex
@@ -141,3 +141,16 @@ int bspline_Sdat(void){
 \lstinputlisting[language=TeX]{graphics/shelltop.tex}
 
 \end{enumerate}
+
+
+%--------------------------------------
+\section{IIR filter code}
+\label{sec:src_df2_order1_cpp}
+%--------------------------------------
+\lstinputlisting[numbers=left, numberstyle=\tiny, language=C++]{../common/cpp/df2_order1_abc.cpp}
+
+%--------------------------------------
+\section{IIR filter code}
+\label{sec:src_df2_order2_cpp}
+%--------------------------------------
+\lstinputlisting[numbers=left, numberstyle=\tiny, language=C++]{../common/cpp/df2_order2.cpp}
