--- a/common/calculus.tex
+++ b/common/calculus.tex
@@ -174,6 +174,13 @@ Then
 \end{lemma}
 
 
+%--------------------------------------
+\begin{example}
+\[\deriv{^3}{x^3}\brs{\ff(x)\fg(x)} = \ff'''(x)\fg(x) + 3\ff''(x)\fg'(x) + 3\ff'(x)\fg''(x) + \ff(x)\fg'''(x)\]
+\end{example}
+
+
+
 
 
 
